scripts/todo.txt
To be fixed:

libcoverart			 -> cmake + Werror pb
adlplug				 -> cmake + juce
BespokeSynth			 -> JUCE was missing + lto
buzztrax			 -> fluidsynth pb
dragonfly-revert   		 -> DGL link pb
ensemble-chorus	   		 -> cmake + juce
fugio		   		 -> cmake + build pb
konfyt		   		 -> Carla build pb
midimonster	   		 -> lua pb
miniaudicle	   		 -> qscintilla was missing
openFrameworks			 -> mk file pb
polyphone			 -> QPainterPath pb
performer			 -> cmake + ui_setlist.h missing
psi-plugins-doc			 -> fltk-devel missing - #include <Fl/Fl_Menu_Button.h>
qscintilla			 -> fail to build
zrythm				 -> doc fails to build
zam				 -> DGL link pb
rivendell			 -> libcoverart
structuresynth			 -> ULONG_MAX missing (in limits.h normally)
stochas				 -> lto
sonic-pi			 -> cmake - check ruby version

Fugio:
/home/artelys/rpmbuild/BUILD/Fugio/plugins/OpenCV/grayscalenode.cpp:65:42: error: 'CV_RGB2GRAY' was not declared in this scope
   65 |    cv::cvtColor( MatSrc, pNode->mMatImg, CV_RGB2GRAY );
      |                                          ^~~~~~~~~~~
/home/artelys/rpmbuild/BUILD/Fugio/plugins/OpenCV/grayscalenode.cpp:69:42: error: 'CV_BGR2GRAY' was not declared in this scope
   69 |    cv::cvtColor( MatSrc, pNode->mMatImg, CV_BGR2GRAY );
      |                                          ^~~~~~~~~~~
/home/artelys/rpmbuild/BUILD/Fugio/plugins/OpenCV/grayscalenode.cpp:73:42: error: 'CV_RGBA2GRAY' was not declared in this scope
   73 |    cv::cvtColor( MatSrc, pNode->mMatImg, CV_RGBA2GRAY );
      |                                          ^~~~~~~~~~~~
/home/artelys/rpmbuild/BUILD/Fugio/plugins/OpenCV/grayscalenode.cpp:77:42: error: 'CV_BGRA2GRAY' was not declared in this scope
   77 |    cv::cvtColor( MatSrc, pNode->mMatImg, CV_BGRA2GRAY );
      |                                          ^~~~~~~~~~~~
/home/artelys/rpmbuild/BUILD/Fugio/plugins/OpenCV/grayscalenode.cpp:60:22: warning: unused variable 'DstFmt' [-Wunused-variable]
   60 |  fugio::ImageFormat  DstFmt = fugio::ImageFormat::GRAY8;
      |                      ^~~~~~
